[package]
name        = "tendermint-abci"
version.workspace     = true
authors     = ["Informal Systems <hello@informal.systems>"]
edition.workspace     = true
license.workspace     = true
readme      = "README.md"
categories  = ["cryptography::cryptocurrencies", "network-programming"]
keywords    = ["abci", "blockchain", "bft", "consensus", "tendermint"]
repository.workspace  = true
description = """
    tendermint-abci provides a simple framework with which to build low-level
    applications on top of Tendermint.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvstore-rs"
path = "src/application/kvstore/main.rs"
required-features = [ "binary", "client", "kvstore-app" ]

[features]
default = ["flex-error/std"]
client = []
echo-app = []
kvstore-app = []
binary = [
    "structopt",
    "tracing-subscriber/fmt",
]

[dependencies]
bytes = { workspace = true }
prost = { workspace = true }
tendermint-proto = { workspace = true }
tracing = { workspace = true }
flex-error = { workspace = true }
structopt = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
