[package]
name       = "tendermint-config"
version.workspace    = true
license.workspace    = true
homepage   = "https://www.tendermint.com/"
repository.workspace = true
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition.workspace    = true

description = """
    tendermint-config provides functions for loading and validating Tendermint
    configuration files. It is moved out of the tendermint crate for no_std support
    in the tendermint crate.
    """

authors = [
    "Informal Systems <hello@informal.systems>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
flex-error = { workspace = true }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[features]
secp256k1 = ["tendermint/secp256k1"]
