[package]
name       = "tendermint-light-client-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository.workspace = true
authors    = [
  "Informal Systems <hello@informal.systems>",
]

description = """
    Implementation of the Tendermint Light Client CLI.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
tendermint-rpc = { workspace = true, default-features = true }
tendermint-light-client = { workspace = true, default-features = true }
tendermint-light-client-detector = { workspace = true }

clap = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true, features = ["std", "async-await", "executor"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["default", "env-filter"] }
