[package]
name       = "tendermint-light-client-detector"
version.workspace = true
edition.workspace = true
license.workspace = true
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository.workspace = true
authors    = [
  "Informal Systems <hello@informal.systems>",
]

description = """
    Implementation of the Tendermint Light Client Attack Detector.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
tendermint-rpc = { workspace = true, default-features = true }
tendermint-proto = { workspace = true }
tendermint-light-client = { workspace = true, default-features = true }

crossbeam-channel = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_derive = { workspace = true }
sled = { workspace = true, optional = true }
static_assertions = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["rt"] }
flex-error = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
