[package]
name        = "tendermint-light-client-js"
version.workspace = true
authors     = ["Informal Systems <hello@informal.systems>"]
edition.workspace = true
license.workspace = true
readme      = "README.md"
keywords    = ["blockchain", "bft", "consensus", "light-client", "tendermint"]
categories  = ["cryptography::cryptocurrencies", "network-programming"]
repository.workspace = true
description = """
    tendermint-light-client-js provides a lightweight, WASM-based interface to
    the Tendermint Light Client's verification functionality.
    """

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
tendermint-light-client-verifier = { workspace = true, features = ["rust-crypto"] }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
