[package]
name       = "tendermint-light-client-verifier"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository.workspace = true
authors    = [
  "Informal Systems <hello@informal.systems>",
]

description = """
    Implementation of the Tendermint Light Client Verification Algorithm.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rust-crypto", "flex-error/std"]
rust-crypto = ["tendermint/rust-crypto"]

[dependencies]
tendermint = { workspace = true }

derive_more = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
flex-error = { workspace = true }

[dev-dependencies]
tendermint-testgen = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
