[package]
name       = "tendermint-light-client"
version.workspace = true
edition.workspace = true
license.workspace = true
readme     = "README.md"
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
repository.workspace = true
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    Implementation of the Tendermint Light Client Verification Protocol.
"""

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rpc-client", "flex-error/std"]
rpc-client = ["tokio", "rust-crypto", "tendermint-rpc/http-client"]
rust-crypto = ["tendermint/rust-crypto", "tendermint-light-client-verifier/rust-crypto"]
secp256k1 = ["tendermint/secp256k1", "tendermint-rpc/secp256k1"]
lightstore-sled = ["sled"]
unstable = ["rust-crypto"]
# Enable to execute long-running model-based tests
mbt = ["rust-crypto"]

[dependencies]
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
tendermint-rpc = { workspace = true, default-features = true }
tendermint-light-client-verifier = { workspace = true }

contracts = { workspace = true }
crossbeam-channel = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_derive = { workspace = true }
sled = { workspace = true, optional = true }
static_assertions = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, optional = true, features = ["rt"] }
flex-error = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tendermint-testgen = { workspace = true }
tendermint-light-client-verifier = { workspace = true, features = ["rust-crypto"] }

serde_json = { workspace = true }
gumdrop = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
