[package]
name        = "tendermint-p2p"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
homepage    = "https://tendermint.com"
readme      = "README.md"
keywords    = ["p2p", "tendermint", "cosmos"]
categories  = ["cryptography::cryptocurrencies", "network-programming"]
authors     = [
  "Informal Systems <hello@informal.systems>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
  "Tony Arcieri <tony@iqlusion.io>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
]

description = """
    The Tendermint P2P stack in Rust.
    """

[lib]
test = false

[features]
default = ["flex-error/std", "flex-error/eyre_tracer"]
amino = ["prost-derive"]

[dependencies]
chacha20poly1305 = { workspace = true }
curve25519-dalek-ng = { workspace = true }
ed25519-consensus = { workspace = true }
eyre = { workspace = true }
flume = { workspace = true }
hkdf = { workspace = true }
merlin = { workspace = true }
prost = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
signature = { workspace = true }
aead = { workspace = true }
flex-error = { workspace = true }

# path dependencies
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-std-ext = { workspace = true }

# optional dependencies
prost-derive = { workspace = true, optional = true }
