[package]
name        = "tendermint-pbt-gen"
version.workspace     = true
authors     = ["Informal Systems <hello@informal.systems>"]
edition.workspace     = true
license.workspace     = true
readme      = "README.md"
categories  = ["development-tools"]
keywords    = ["tendermint", "property-based testing"]
repository.workspace  = true
description = """
            An internal crate providing proptest generators used across our
            crates and not depending on any code internal to those crates.
            """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time"]

[dependencies]
time = { workspace = true, optional = true }
proptest = { workspace = true }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
