[package]
name       = "tendermint-proto"
version.workspace    = true
authors    = ["Informal Systems <hello@informal.systems>"]
edition.workspace    = true
license.workspace    = true
repository.workspace = true
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "tendermint", "proto"]

description = """
    tendermint-proto is a the Rust implementation of the Tendermint proto structs.
    """

[features]
default = []
std = []
grpc = ["grpc-server"]
grpc-server = ["dep:tonic", "std"]
json-schema = ["dep:schemars", "std"]
borsh = ["dep:borsh"]
parity-scale-codec = ["dep:parity-scale-codec", "dep:scale-info"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = { workspace = true, features = ["derive"] }
bytes = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_bytes = { workspace = true, features = ["alloc"] }
subtle-encoding = { workspace = true, features = ["hex", "base64", "alloc"] }
time = { workspace = true, features = ["macros", "parsing"] }
flex-error = { workspace = true }
tonic = { workspace = true, optional = true }

## Optional: enabled by the `json-schema` feature
schemars = { workspace = true, optional = true }

## Optional: enabled by the `borsh` feature
## For borsh encode or decode, needs to track `anchor-lang` and `near-sdk-rs` borsh version
borsh = { workspace = true, optional = true }

## Optional: enabled by the `parity-scale-codec` feature
parity-scale-codec = { workspace = true, optional = true }
scale-info         = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["alloc"] }
