[package]
name       = "tendermint-rpc"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage   = "https://www.tendermint.com/"
repository.workspace = true
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
authors    = [
  "Informal Systems <hello@informal.systems>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    tendermint-rpc contains the core types returned by a Tendermint node's RPC endpoint.
    All networking related features are feature guarded to keep the dependencies small in
    cases where only the core types are needed.
    """

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "tendermint-rpc"
path = "src/client/bin/main.rs"
required-features = [ "cli" ]

[features]
default = [
  "flex-error/std",
  "flex-error/eyre_tracer"
]
secp256k1 = [
  "tendermint/secp256k1"
]
cli = [
  "http-client",
  "structopt",
  "tracing-subscriber",
  "websocket-client"
]
http-client = [
  "futures",
  "reqwest",
  "tokio/macros",
  "tracing"
]
websocket-client = [
  "async-tungstenite",
  "futures",
  "tokio/rt-multi-thread",
  "tokio/macros",
  "tokio/sync",
  "tokio/time",
  "tracing"
]
mock-client = [
  "futures",
  "tracing",
  "tokio/macros"
]

[dependencies]
tendermint = { workspace = true }
tendermint-config = { workspace = true }
tendermint-proto = { workspace = true }

async-trait = { workspace = true }
bytes = { workspace = true }
getrandom = { workspace = true }
peg = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros", "parsing"] }
uuid = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
subtle-encoding = { workspace = true, features = ["bech32-preview"] }
url = { workspace = true }
walkdir = { workspace = true }
flex-error = { workspace = true }
subtle = { workspace = true }
semver = { workspace = true }

# Optional dependencies
async-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
structopt = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }

[dev-dependencies]
tendermint = { workspace = true, features = ["secp256k1"] }
http = { workspace = true }
lazy_static = { workspace = true }
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs"] }
