[package]
name       = "tendermint-std-ext"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
homepage   = "https://www.tendermint.com/"
repository.workspace = true
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["development-tools"]
authors    = ["Informal Systems <hello@informal.systems>"]

description = """
    tendermint-std-ext contains extensions to the Rust standard library for use
    from tendermint-rs.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
