[package]
name       = "tendermint"
version.workspace    = true # Also update depending crates (rpc, light-node, etc..) when bumping this .
license.workspace    = true
homepage   = "https://www.tendermint.com/"
repository.workspace = true
readme     = "../README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords   = ["blockchain", "bft", "consensus", "cosmos", "tendermint"]
edition.workspace    = true

description = """
    Tendermint is a high-performance blockchain consensus engine that powers
    Byzantine fault tolerant applications written in any programming language.
    This crate provides core types for representing information about Tendermint
    blockchain networks, including chain information types, secret connections,
    and remote procedure calls (JSON-RPC).
    """

authors = [
    "Informal Systems <hello@informal.systems>",
    "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
    "ValarDragon <dojha12@gmail.com>",
    "Tony Arcieri <tony@iqlusion.io>",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = { workspace = true, features = ["serde"] }
digest = { workspace = true }
ed25519 = { workspace = true }
futures = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
serde_bytes = { workspace = true }
serde_repr = { version = "0.1", default-features = false }
signature = { workspace = true, features = ["alloc"] }
subtle = { workspace = true }
subtle-encoding = { workspace = true, features = ["bech32-preview"] }
tendermint-proto = { workspace = true }
time = { workspace = true, features = ["macros", "parsing"] }
zeroize = { workspace = true, features = ["zeroize_derive", "alloc"] }
flex-error = { workspace = true }
ed25519-consensus = { workspace = true, optional = true }
sha2 = { workspace = true }
k256 = { workspace = true, optional = true, features = ["alloc", "ecdsa"] }
ripemd = { workspace = true, optional = true }

[features]
default = ["std", "rust-crypto"]
std = ["flex-error/std", "clock"]
clock = ["time/std"]
secp256k1 = ["rust-crypto", "dep:k256", "dep:ripemd"]
rust-crypto = ["dep:ed25519-consensus"]

[dev-dependencies]
k256 = { workspace = true, features = ["ecdsa"] }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
tendermint-pbt-gen = { workspace = true, features = ["time"] }
