[package]
name        = "tendermint-test"
description = "Tendermint workspace tests and common utilities for testing."
version.workspace = true
edition.workspace = true
license.workspace = true
categories  = ["development", "test", "tools"]
repository.workspace = true
keywords    = ["blockchain", "tendermint", "testing"]
readme      = "README.md"
authors     = ["Alexander Simmerl <a.simmerl@gmail.com>"]

[lib]
test = true

[dev-dependencies]
curve25519-dalek-ng = { workspace = true }
ed25519-consensus = { workspace = true }
flex-error = { workspace = true }
flume = { workspace = true }
rand_core = { workspace = true }
readwrite = { workspace = true }
subtle-encoding = { workspace = true }

tendermint = { workspace = true, features = ["std", "rust-crypto"] }
tendermint-p2p = { workspace = true }
tendermint-proto = { workspace = true }
