[package]
name        = "tendermint-testgen"
version.workspace     = true
authors     = ["Informal Systems <hello@informal.systems>"]
edition.workspace     = true
readme      = "README.md"
license.workspace     = true
homepage    = "https://www.tendermint.com/"
repository.workspace  = true
keywords    = ["blockchain", "tendermint", "testing"]
categories  = ["cryptography::cryptocurrencies", "development-tools"]
description = """
    tendermint-testgen is a library and a small binary utility for generating
    tendermint datastructures from minimal input (for testing purposes only).
    The library also contains some functionality to simplify running test batches.
    """

[dependencies]
tendermint = { workspace = true, features = ["std", "rust-crypto"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
ed25519-consensus = { workspace = true }
gumdrop = { workspace = true }
simple-error = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true, features = ["std"] }

[[bin]]
name = "tendermint-testgen"
path = "bin/tendermint-testgen.rs"
