[package]
name = "abci-test"
version = "0.40.4"
authors = ["Informal Systems <hello@informal.systems>"]
edition = "2021"
description = """
    abci-test provides some end-to-end integration testing between
    tendermint-abci and a full Tendermint node.
    """

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flex-error = { version = "0.4.4", default-features = false, features = ["std"] }
futures = "0.3"
structopt = "0.3"
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-config = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-rpc = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1.20", features = ["full"] }
