[package]
name = "no-std-check"
version = "0.1.0"
edition = "2021"

[dependencies]
tendermint = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-proto = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp" }
tendermint-light-client-verifier = { git = "https://github.com/permissionlessweb/tendermint-rs", branch = "zk-mvp", default-features = false }

sp-core = { version = "4.0.0", default-features = false, optional = true }
sp-io = { version = "4.0.0", default-features = false, optional = true }
sp-runtime = { version = "4.0.0", default-features = false, optional = true }
sp-std = { version = "4.0.0", default-features = false, optional = true }

[features]
panic-handler = []
use-substrate = [
  "sp-core",
  "sp-io",
  "sp-runtime",
  "sp-std",
]
substrate-std = [
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
